# webcam-tamagotchi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: CMakeLists.txt  ScreenDetector.cpp  ScreenDetector.h  ScreenExtractor.cpp  ScreenExtractor.h
